src/test/ui/issues/issue-51632-try-desugar-incompatible-types.stderr
error[E0308]: try expression alternatives have incompatible types
  --> $DIR/issue-51632-try-desugar-incompatible-types.rs:8:5
   |
LL |     missing_discourses()?
   |     ^^^^^^^^^^^^^^^^^^^^-
   |     |                   |
   |     |                   help: try removing this `?`
   |     expected enum `std::result::Result`, found isize
   |
   = note: expected type `std::result::Result<isize, ()>`
              found type `isize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
